# BlackBox

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  schema.sql
.github/workflows/: windows-cd.yml  windows-ci.yml
docs/: project-map.md
scripts/: package-windows.ps1
src/: active_window.cpp  activity_segment.cpp  activity_segment.h  app_icon.cpp  app_icon.h  database.cpp  database.h  gui_main.cpp  main.cpp  main_window.cpp  main_window.h  recorder.cpp  recorder.h  reporter.cpp  reporter.h  text.cpp  text.h
src/cli/: main.cpp
src/core/: activity_segment.cpp  activity_segment.h  text.cpp
src/gui/: app_icon.cpp  gui_main.cpp  main_window.cpp  main_window.h  main_window_style.cpp  main_window_style.h  recording_controller.cpp  recording_controller.h  settings_dialog.cpp  settings_dialog.h  usage_bar_chart.cpp  usage_bar_chart.h  usage_report.cpp  usage_report.h
src/platform/windows/: active_window.cpp  active_window.h
src/recorder/: recorder.cpp  recorder.h
src/reporting/: reporter.cpp  reporter.h  usage_report.cpp  usage_report.h
src/settings/: app_settings.cpp  app_settings.h
src/storage/: database.cpp  database.h
tests/: activity_segment_test.cpp  database_test.cpp
